# QazNLTK

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  setup.py
qaznltk/: __init__.py
special_words/: negative_words.txt  positive_words.txt  stop_words.txt
src/qaznltk/: __init__.py  exceptions.py  legacy.py  metrics.py  qaznltk.py  tfidf_vectorizer.py  utils.py  vectorizer.py
src/special_words/: negative_words.txt  positive_words.txt  stop_words.txt
