[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qaznltk"
version = "1.2.4.3"
authors = [
  { name="Aibol Zhussip, Kadyr Saparbay, Tair Ussen, Tuleuov Akhan & Arman Zhalgasbayev", email="supwithproject@gmail.com" },
]
description = "A package for working with Kazakh language text processing."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
'Homepage' = "https://github.com/silvermete0r/QazNLTK"
'Bug Tracker' = "https://github.com/silvermete0r/QazNLTK/issues"
