[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qaznltk"
version = "1.3.0.1"
authors = [
  { name="Aibol Zhussip, Kadyr Saparbay & Arman Zhalgasbayev", email="supwithproject@gmail.com" },
]
description = "A package for working with Kazakh language text processing."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qaznltk = ["special_words/*.txt"]

[project.urls]
'Homepage' = "https://github.com/silvermete0r/QazNLTK"
'Bug Tracker' = "https://github.com/silvermete0r/QazNLTK/issues"